--- a/404.html
+++ b/404.html
@@ -31,11 +31,11 @@
 
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="My new homepage or blog"><meta name="twitter:card" content="summary_large_image"/>
+<meta itemprop="description" content="Braam Beresford"><meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="My new homepage or blog"/>
+<meta name="twitter:description" content="Braam Beresford"/>
 
 
 
@@ -72,7 +72,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/posts">Blog</a></li>
+    <ul class="menu__inner"><li><a href="/about">About</a></li><li><a href="/posts">Blog</a></li><li><a href="/projects">Projects</a></li><li><a href="/resume.pdf">Resume</a></li>
     </ul>
 </nav>
 
