--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
 
 <meta itemprop="name" content="Hello Friend NG">
-<meta itemprop="description" content="My new homepage or blog"><meta name="twitter:card" content="summary_large_image"/>
+<meta itemprop="description" content="Braam Beresford"><meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/"/>
 
 <meta name="twitter:title" content="Hello Friend NG"/>
-<meta name="twitter:description" content="My new homepage or blog"/>
+<meta name="twitter:description" content="Braam Beresford"/>
 
 
 
@@ -74,7 +74,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/posts">Blog</a></li>
+    <ul class="menu__inner"><li><a href="/about">About</a></li><li><a href="/posts">Blog</a></li><li><a href="/projects">Projects</a></li><li><a href="/resume.pdf">Resume</a></li>
     </ul>
 </nav>
 
